# hlas-do-textu

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build-macos.yml  build-windows.yml  test-windows-update.yml
app/: __init__.py  __main__.py  config.py  logging_setup.py  settings.py
app/core/: audio_extract.py  checkpoint.py  md_export.py  model_downloader.py  models.py  pdf_extract.py  pipeline.py  pptx_extract.py  transcribe.py  transcribe_gemini.py  watch_folder.py  word_export.py  youtube_fetch.py
app/gui/: job_queue.py  main_window.py
design/: BRIEF.md  CONSTRAINTS.md  README.md
docs/: ARCHITECTURE.md  INSTALACE_OLLAMA.md  PRVNI_SPUSTENI.md  ZISKAT_GEMINI_KLIC.md
flashdisk_balicek/: CTI_ME_NEJDRIV.txt
installer/: HlasDoTextu.iss  LICENSE_cs.txt
scripts/: build_local.sh  download_ffmpeg_macos.py  download_ffmpeg_windows.py  generate_icon.py  make_key.py  quality_check.py  smoke_test.py
test_samples/: README.md  compare.py  compare_outputs.py  e2e_with_gemini.py  e2e_with_ollama.py  extract_ground_truth.py  screenshot_roles.py  screenshot_settings.py  screenshot_ui.py  screenshot_wave1.py
tests/: conftest.py  test_batch_split.py  test_chat.py  test_checkpoint.py  test_chunker.py  test_file_intake.py  test_integrations.py  test_job_mode.py  test_licensing.py  test_pdf_pptx_extract.py  test_pipeline_helpers.py  test_regenerate.py  test_router_parse.py  test_secret_storage.py  test_settings_coerce.py  test_transcribe_gemini.py  test_updater_client.py  test_word_export.py
(+55 files in other folders)
