[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hlas-do-textu"
version = "0.1.0"
description = "Přepis přednášek a generování studijních bodů (Whisper + Gemini)"
readme = "README.md"
requires-python = ">=3.11,<3.15"
authors = [{ name = "Safe4Future z. ú." }]
license = { text = "MIT" }
dependencies = [
    "PySide6~=6.7",
    "faster-whisper>=1.0,<2.0",
    "huggingface-hub>=0.24",
    "pdfplumber>=0.11",
    "python-pptx>=1.0",
    "python-docx>=1.2",
    "google-genai>=0.3",
    "httpx>=0.27",
    "keyring>=25.0",
    "loguru>=0.7",
    "pydantic>=2.6",
    "tiktoken>=0.7",
    "yt-dlp>=2024.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pyinstaller>=6.10",
    "ruff>=0.4",
    "reportlab>=4.0",
    "Pillow>=10.0",
]

[project.scripts]
hlas-do-textu = "app.__main__:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["resources/**/*"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]
